Nav gap issue

--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -2,7 +2,6 @@
   position: fixed;
   left: 0;
   right: 0;
-  bottom: var(--nav-total-h);
   margin: auto;
   width: 100%;
   max-width: 500px;
